更新合约地址 以及 dgc说明

--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -760,6 +760,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Можете ли вы начать, спросив меня о случаях, когда я наиболее откладываю выполнение дел, а затем дать мне несколько советов, чтобы преодолеть это?",
   "I konw": "Я знаю",
   "About DGC": "О DGC",
+  "Instructions for importing private keys into wallets": "Инструкция по импорту приватных ключей в кошельки",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Приватные ключи кошельков, созданных на сайте, могут быть импортированы в следующие кошельки, такие как Metamask, imToken...",
+  "Steps for importing wallets": "Шаги по импорту кошельков",
+  "Click on [Add Custom Network]": "Нажмите на [Добавить пользовательскую сеть]",
+  "Enter the following information": "Введите следующую информацию",
+  "Network Name": "Название сети",
+  "Chain RPC Address": "Адрес RPC цепи",
+  "Chain ID": "Идентификатор цепи",
+  "Coin Symbol": "Символ валюты",
+  "The contract address of DGC": "Адрес контракта DGC",
+  "Instructions": "Инструкция",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "Если проблема остается нерешенной, пожалуйста, присоединяйтесь к группе в Telegram и следите за нами в X",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "До запуска на основной сети любой торговой платформы токены DGC помечаются как очки. Эти очки будут преобразованы в соотношении 1:1, когда DGC официально запустится. Команда DGC 确保这种转换顺利进行并防止对这项政策的任何滥用。",
   "About DBC": "О DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain - это первая публичная цепь ИИ в мире. Его собственный токен, DBC, используется в качестве комиссии за газ в этом проекте. Любая транзакция DGC требует определенного количества номинальных DBC.",
