--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -761,6 +761,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "En çok erteleme yaptığım durumlardan bahsederek başlayabilir misin ve sonra bunu aşmak için bazı öneriler verebilir misin?",
   "I konw": "Biliyorum",
   "About DGC": "DGC Hakkında",
+  "Instructions for importing private keys into wallets": "Cüzdanlara özel anahtarları içeri aktarma talimatları",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Web sitesinde oluşturulan cüzdanların özel anahtarları, Metamask, imToken gibi aşağıdaki cüzdanlara aktarılabilir.",
+  "Steps for importing wallets": "Cüzdanları içeri aktarma adımları",
+  "Click on [Add Custom Network]": "[Özel Ağ Ekle]'ye tıklayın",
+  "Enter the following information": "Aşağıdaki bilgileri girin",
+  "Network Name": "Ağ Adı",
+  "Chain RPC Address": "Zincir RPC Adresi",
+  "Chain ID": "Zincir Kimliği",
+  "Coin Symbol": "Para Birimi Semboli",
+  "The contract address of DGC": "DGC'nin sözleşme adresi",
+  "Instructions": "Talimatlar",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "Sorun çözülmezse, Telegram grubuna katılın ve X'de bizi takip edin",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Herhangi bir ticaret platformunun ana ağına (mainnet) başlamadan önce, DGC tokenleri puan olarak işaretlenir. DGC resmi olarak başladığında, bu puanlar 1:1 oranında dönüştürülür. DGC takımının bu geçişin sorunsuz geçtiğinden ve bu politikanın herhangi bir kötüye kullanımından emin olması gerekir.",
   "About DBC": "DBC Hakkında",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain, dünyanın ilk yapay zeka (AI) açık zinciridir. İlgili proje için, yerel tokenı olan DBC, gaz ücreti olarak kullanılır. Herhangi bir DGC işlemi belirli bir miktarda nominal DBC'ye ihtiyaç duyar.",
