--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -761,6 +761,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Könntest du damit beginnen, mich nach Situationen zu fragen, in denen ich am meisten procrastiniere, und mir dann einige Vorschläge geben, um es zu überwinden?",
   "I konw": "Ich weiß",
   "About DGC": "Über DGC",
+  "Instructions for importing private keys into wallets": "Anweisungen zum Importieren von Privatschlüsseln in Wallets",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Die Privatschlüssel von auf der Website erstellten Wallets können in die folgenden Wallets importiert werden, wie Metamask, imToken usw.",
+  "Steps for importing wallets": "Schritte zum Importieren von Wallets",
+  "Click on [Add Custom Network]": "Klicken Sie auf [Benutzerdefiniertes Netzwerk hinzufügen]",
+  "Enter the following information": "Geben Sie die folgenden Informationen ein",
+  "Network Name": "Netzwerknamen",
+  "Chain RPC Address": "Chain RPC-Adresse",
+  "Chain ID": "Chain-ID",
+  "Coin Symbol": "Währungssymbol",
+  "The contract address of DGC": "Die Vertragsadresse von DGC",
+  "Instructions": "Anweisungen",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "Wenn das Problem weiterhin ungelöst bleibt, bitte treten Sie der Telegram-Gruppe bei und folgen Sie uns auf X",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Bevor DGC auf dem Hauptnetz irgendeiner Handelsplattform gestartet wird, werden die DGC-Token als Punkte markiert. Diese Punkte werden im Verhältnis 1:1 konvertiert, wenn DGC offiziell gestartet wird. Das DGC-Team wird sicherstellen, dass dieser Übergang reibungslos verläuft und jegliche Missbrauch dieser Politik verhindern.",
   "About DBC": "Über DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain ist die weltweit erste KI-Öffentliche Kette. Sein eigenes Token, DBC, wird in diesem Projekt als Gasgebühr genutzt. Jede DGC-Transaktion erfordert eine bestimmte Menge an nominalen DBCs.",
