--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -761,6 +761,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "",
   "I konw": "",
   "About DGC": "",
+  "Instructions for importing private keys into wallets": "",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "",
+  "Steps for importing wallets": "",
+  "Click on [Add Custom Network]": "",
+  "Enter the following information": "",
+  "Network Name": "",
+  "Chain RPC Address": "",
+  "Chain ID": "",
+  "Coin Symbol": "",
+  "The contract address of DGC": "",
+  "Instructions": "",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "",
   "About DBC": "",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "",
