--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -761,6 +761,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "¿Podrías comenzar preguntándome sobre las ocasiones en las que más procrasino y luego darme algunos consejos para superarlo?",
   "I konw": "Yo sé",
   "About DGC": "Acerca de DGC",
+  "Instructions for importing private keys into wallets": "Instrucciones para importar claves privadas a las billeteras",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Las claves privadas de las billeteras creadas en el sitio web pueden importarse en las siguientes billeteras, como Metamask, imToken...",
+  "Steps for importing wallets": "Pasos para importar billeteras",
+  "Click on [Add Custom Network]": "Haga clic en [Agregar red personalizada]",
+  "Enter the following information": "Introduzca la siguiente información",
+  "Network Name": "Nombre de la red",
+  "Chain RPC Address": "Dirección RPC de la cadena",
+  "Chain ID": "ID de la cadena",
+  "Coin Symbol": "Símbolo de la moneda",
+  "The contract address of DGC": "Dirección del contrato de DGC",
+  "Instructions": "Instrucciones",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "Si el problema sigue sin resolverse, únase al grupo de Telegram y síganos en X",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Antes de lanzarse en la red principal de cualquier plataforma de trading, las fichas DGC se marcan como puntos. Estos puntos se convertirán en una proporción de 1:1 cuando DGC se lance oficialmente. El equipo de DGC se asegurará de que esta transición se realice sin problemas y evitará cualquier abuso de esta política.",
   "About DBC": "Acerca de DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain es la primera cadena pública de IA del mundo. Su token nativo, DBC, se utiliza como tarifa de gas en este proyecto. Cualquier transacción DGC requiere una cierta cantidad de DBCs nominales.",
