--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -760,6 +760,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Pourriez-vous commencer par me demander des exemples de moments où je procrastine le plus puis me donner quelques conseils pour le surmonter?",
   "I konw": "Je sais",
   "About DGC": "À propos de DGC",
+  "Instructions for importing private keys into wallets": "Instructions pour importer les clés privées dans les portefeuilles",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Les clés privées des portefeuilles créés sur le site web peuvent être importées dans les portefeuilles suivants, tels que Metamask, imToken...",
+  "Steps for importing wallets": "Étapes pour importer des portefeuilles",
+  "Click on [Add Custom Network]": "Cliquez sur [Ajouter un réseau personnalisé]",
+  "Enter the following information": "Entrez les informations suivantes",
+  "Network Name": "Nom du réseau",
+  "Chain RPC Address": "Adresse RPC de la chaîne",
+  "Chain ID": "Identifiant de la chaîne",
+  "Coin Symbol": "Symbole de la monnaie",
+  "The contract address of DGC": "Adresse du contrat de DGC",
+  "Instructions": "Instructions",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "Si le problème reste non résolu, veuillez rejoindre le groupe Telegram et nous suivre sur X",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Avant le lancement sur le réseau principal de toute plateforme de trading, les jetons DGC sont marqués en points. Ces points seront convertis au ratio 1:1 lorsque DGC sera lancé officiellement. L'équipe DGC veillera à ce que cette transition se fasse en douceur et préviendra tout abus de cette politique.",
   "About DBC": "À propos de DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain est la première chaîne publique d'IA au monde. Son jeton natif, DBC, est utilisé comme frais de gaz dans ce projet. Toutes les transactions DGC nécessitent une certaine quantité de DBC nominaux.",
