--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -761,6 +761,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Bisakah Anda mulai dengan menanyakan kepada saya tentang kejadian-kejadian ketika saya paling suka menunda-nunda kemudian memberi saya beberapa saran untuk mengatasi itu?",
   "I konw": "Saya tahu",
   "About DGC": "Tentang DGC",
+  "Instructions for importing private keys into wallets": "Petunjuk untuk mengimpor kunci privat ke dompet",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Kunci privat dompet yang dibuat di situs web ini dapat diimpor ke dompet berikut, seperti Metamask, imToken...",
+  "Steps for importing wallets": "Langkah-langkah untuk mengimpor dompet",
+  "Click on [Add Custom Network]": "Klik [Tambah Jaringan Khusus]",
+  "Enter the following information": "Masukkan informasi berikut",
+  "Network Name": "Nama Jaringan",
+  "Chain RPC Address": "Alamat RPC Rantai",
+  "Chain ID": "ID Rantai",
+  "Coin Symbol": "Simbol Mata Uang",
+  "The contract address of DGC": "Alamat Kontrak DGC",
+  "Instructions": "Petunjuk",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "Jika masalah tetap tidak terpecahkan, silakan gabung ke grup Telegram dan ikuti kami di X",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Sebelum diluncurkan pada mainnet dari platform perdagangan apapun, token DGC ditandai sebagai poin. Poin-poin ini akan dikonversi dengan rasio 1:1 ketika DGC secara resmi diluncurkan. Tim DGC akan memastikan bahwa transisi ini berjalan lancar dan mencegah penyalahgunaan kebijakan ini.",
   "About DBC": "Tentang DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain adalah rantai publik AI pertama di dunia. Token aslinya, DBC, digunakan sebagai biaya gas dalam proyek ini. Setiap transaksi DGC memerlukan sejumlah DBC nominal tertentu.",
