--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -761,6 +761,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "あなたは、私が最も先延ばしをする状況について尋ねてから、それを克服するためのアドバイスをくれることはできますか？",
   "I konw": "私は知っています",
   "About DGC": "DGC について",
+  "Instructions for importing private keys into wallets": "ウォレットへの秘密鍵のインポート方法",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "ウェブサイトで作成されたウォレットの秘密鍵は、MetaMask、imToken などの次のウォレットにインポートできます",
+  "Steps for importing wallets": "ウォレットをインポートする手順",
+  "Click on [Add Custom Network]": "[カスタムネットワークの追加] をクリックする",
+  "Enter the following information": "以下の情報を入力する",
+  "Network Name": "ネットワーク名",
+  "Chain RPC Address": "チェーン RPC アドレス",
+  "Chain ID": "チェーン ID",
+  "Coin Symbol": "通貨記号",
+  "The contract address of DGC": "DGC のコントラクトアドレス",
+  "Instructions": "説明",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "問題が解決されない場合は、Telegram グループに参加し、X で私たちをフォローしてください",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "どの取引プラットフォームのメインネットに立ち上げる前に、DGC トークンはポイントとしてマークされます。DGC が正式に立ち上げられるとき、これらのポイントは 1:1 の比率で変換されます。DGC チームは、この移行がスムーズに行われ、このポリシーの乱用を防ぐように確認します。",
   "About DBC": "DBC について",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "ディープブレインチェインは世界初の AI パブリックチェインです。そのネイティブトークンである DBC は、このプロジェクトでガス料金として使われます。どの DGC 取引も一定量の名目上の DBC を必要とします。",
