--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -761,6 +761,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "제가 가장 늦추는 상황에 대해 묻고 나서 그것을 극복하기 위한 몇 가지 제안을 주실 수 있을까요?",
   "I konw": "나는 알고 있다",
   "About DGC": "DGC에 관하여",
+  "Instructions for importing private keys into wallets": "지갑으로 개인 키를 가져오는 방법",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "웹사이트에서 생성된 지갑의 개인 키는 MetaMask, imToken 등 다음 지갑에 가져올 수 있습니다.",
+  "Steps for importing wallets": "지갑 가져오기 단계",
+  "Click on [Add Custom Network]": "[사용자 정의 네트워크 추가]를 클릭합니다",
+  "Enter the following information": "다음 정보를 입력합니다",
+  "Network Name": "네트워크 이름",
+  "Chain RPC Address": "체인 RPC 주소",
+  "Chain ID": "체인 ID",
+  "Coin Symbol": "화폐 기호",
+  "The contract address of DGC": "DGC 계약 주소",
+  "Instructions": "설명",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "문제가 해결되지 않으면 Telegram 그룹에 가입하고 X에서 팔로우하세요",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "어떤 거래 플랫폼의 메인넷에 출시되기 전에, DGC 토큰은 포인트로 표시됩니다. DGC가 공식적으로 출시될 때, 이러한 포인트는 1:1 비율로 변환됩니다. DGC 팀은 이 전환이 원활하게 이루어지고 이 정책의 남용을 방지할 것입니다.",
   "About DBC": "DBC에 관하여",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "딥브레인체인은 세계 최초의 AI 공개 체인입니다. 그 자체 토큰인 DBC는 이 프로젝트에서 가스 요금으로 사용됩니다. 모든 DGC 거래는 일정량의 명목상의 DBC를 요구합니다.",
