--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -761,6 +761,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Você poderia começar perguntando-me sobre as ocasiões em que mais procrastino e depois me dar algumas sugestões para superá-lo?",
   "I konw": "Eu sei",
   "About DGC": "Sobre DGC",
+  "Instructions for importing private keys into wallets": "Instruções para importar chaves privadas para carteiras",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "As chaves privadas de carteiras criadas no site podem ser importadas para as seguintes carteiras, como Metamask, imToken...",
+  "Steps for importing wallets": "Passos para importar carteiras",
+  "Click on [Add Custom Network]": "Clique em [Adicionar rede personalizada]",
+  "Enter the following information": "Digite as seguintes informações",
+  "Network Name": "Nome da rede",
+  "Chain RPC Address": "Endereço RPC da cadeia",
+  "Chain ID": "ID da cadeia",
+  "Coin Symbol": "Símbolo da moeda",
+  "The contract address of DGC": "Endereço do contrato de DGC",
+  "Instructions": "Instruções",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "Se o problema permanecer sem solução, junte-se ao grupo do Telegram e siga-nos no X",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Antes do lançamento na rede principal de qualquer plataforma de negociação, as fichas DGC são marcadas como pontos. Esses pontos serão convertidos na proporção 1:1 quando o DGC for lançado oficialmente. A equipe do DGC vai garantir que essa transição ocorra sem problemas e evitar qualquer abuso dessa política.",
   "About DBC": "Sobre DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "A DeepBrainChain é a primeira cadeia pública de IA do mundo. Seu token nativo, DBC, é usado como taxa de gás neste projeto. Todas as transações DGC requerem uma certa quantidade de DBCs nominais.",
