--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -760,6 +760,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "คุณสามารถเริ่มด้วยการถามฉันเกี่ยวกับเหตุการณ์ที่ฉันล่าช้าได้มากที่สุด แล้วให้คำแนะนำให้ฉันเพื่อเอาชนะมันได้หรือไม่?",
   "I konw": "ฉันรู้",
   "About DGC": "เกี่ยวกับ DGC",
+  "Instructions for importing private keys into wallets": "คำแนะนำในการนำเข้า คีย์ส่วนตัวลงในกระเป๋าเงิน",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "คีย์ส่วนตัวของกระเป๋าเงินที่สร้างขึ้นบนเว็บไซต์สามารถนำเข้าไปในกระเป๋าเงินต่อไปนี้ เช่น Metamask, imToken...",
+  "Steps for importing wallets": "ขั้นตอนในการนำเข้ากระเป๋าเงิน",
+  "Click on [Add Custom Network]": "คลิกที่ [เพิ่มเครือข่ายกำหนดเอง]",
+  "Enter the following information": "กรอกข้อมูลดังต่อไปนี้",
+  "Network Name": "ชื่อเครือข่าย",
+  "Chain RPC Address": "ที่อยู่ RPC ของโซ่",
+  "Chain ID": "รหัสโซ่",
+  "Coin Symbol": "สัญลักษณะเหรียญ",
+  "The contract address of DGC": "ที่อยู่สัญญาของ DGC",
+  "Instructions": "คำแนะนำ",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "หากปัญหายังคงไม่ได้รับการแก้ไข โปรดเข้าร่วมกลุ่ม Telegram และติดตามเราใน X",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "ก่อนการเปิดตัวบนโครงการหลักของแพลตฟอร์มการซื้อขายใด ๆ, โทเค็น DGC จะถูกกำหนดเป็นแต้ม. เหตุการณ์เหล่านี้จะถูกแปลงในอัตราส่วน 1:1 เมื่อ DGC เปิดตัวอย่างเป็นทางการ. ทีม DGC จะรับประกันว่าการเปลี่ยนแปลงนี้จะดำเนินต่อไปอย่างราบรื่นและป้องกันการประพฤติตัวอย่างไม่เหมาะสมของนโยบายนี้.",
   "About DBC": "เกี่ยวกับ DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain เป็นโครงการประชาชน AI แรกในโลก. โทเค็นดั้งเดิมของมันคือ DBC ซึ่งถูกใช้เป็นค่าธรรมเนียมแก๊สในโครงการนี้. การทำธุรกรรม DGC ใด ๆ จะต้องมี DBC แบบมีชื่อเรียกจำนวนหนึ่ง.",
