--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -752,6 +752,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "Bạn có thể bắt đầu bằng cách hỏi tôi về các trường hợp tôi trì hoãn nhiều nhất và sau đó cho tôi một số gợi ý để vượt qua nó không?",
   "I konw": "Tôi biết",
   "About DGC": "Về DGC",
+  "Instructions for importing private keys into wallets": "Hướng dẫn nhập khóa riêng vào ví tiền",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "Các khóa riêng của các ví tiền được tạo trên website có thể được nhập vào các ví tiền sau đây, chẳng hạn như Metamask, imToken...",
+  "Steps for importing wallets": "Các bước để nhập ví tiền",
+  "Click on [Add Custom Network]": "Nhấn vào [Thêm mạng tự định nghĩa]",
+  "Enter the following information": "Nhập các thông tin sau",
+  "Network Name": "Tên mạng",
+  "Chain RPC Address": "Địa chỉ RPC của chuỗi",
+  "Chain ID": "ID của chuỗi",
+  "Coin Symbol": "Ký hiệu tiền tệ",
+  "The contract address of DGC": "Địa chỉ hợp đồng của DGC",
+  "Instructions": "Hướng dẫn",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "Nếu vấn đề vẫn chưa được giải quyết, vui lòng tham gia nhóm Telegram và theo dõi chúng tôi trên X",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Trước khi được phát hành trên mạng chính của bất kỳ nền tảng giao dịch nào, các mã thông báo DGC được đánh dấu là điểm. Những điểm này sẽ được chuyển đổi theo tỷ lệ 1:1 khi DGC được chính thức phát hành. Đội ngũ DGC sẽ đảm bảo rằng quá trình chuyển đổi này diễn ra suôn sẻ và ngăn chặn mọi sự lạm dụng của chính sách này.",
   "About DBC": "Về DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain là chuỗi công khai AI đầu tiên trên thế giới. Mã thông báo bản địa của nó, DBC, được sử dụng làm phí khí trong dự án này. Bất kỳ giao dịch DGC nào đều yêu cầu một lượng nhất định các DBC danh nghĩa.",
