--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -760,6 +760,18 @@
   "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?": "你能不能先问问我拖延情况最严重的事例，然后给我一些克服拖延的建议呢？",
   "I konw": "我知道",
   "About DGC": "关于 DGC",
+  "Instructions for importing private keys into wallets": "私钥导入钱包说明",
+  "The private keys of wallets created on the website can be imported into the following wallets, such as Metamask, imToken...": "在网站创建的钱包私钥可导入以下钱包，Metamask,imToken...",
+  "Steps for importing wallets": "导入钱包步骤",
+  "Click on [Add Custom Network]": "点击【添加自定义网络】",
+  "Enter the following information": "输入以下信息",
+  "Network Name": "网络名称",
+  "Chain RPC Address": "链RPC地址",
+  "Chain ID": "链ID",
+  "Coin Symbol": "币符号",
+  "The contract address of DGC": "DGC的合约地址",
+  "Instructions": "说明",
+  "If the problem remains unresolved, please join the Telegram group and follow us on X": "如问题未解决，请加入TG群和关注X",
   "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "在任何交易平台的主网启动之前，DGC 代币被标记为积分。当 DGC 正式上线时，这些积分将按照 1:1 的比例进行转换。DGC 团队将确保这一转换过程顺利进行，并防止对这一政策的任何滥用。",
   "About DBC": "关于 DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "深脑链（DeepBrainChain）是世界上首个人工智能公链。其原生代币 DBC 在该项目中被用作燃气费（手续费）。任何 DGC 交易都需要一定数量的名义上的 DBC。",
