--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -731,9 +731,9 @@
   "The verification code has been verified successfully": "인증 코드가 성공적으로 검증되었습니다.",
   "The verification code is invalid": "인증 코드가 유효하지 않습니다.",
   "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
-  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward,The activity lasts until January 2nd, 2025.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다,이 활동은 2025년 1월 2일까지 진행됩니다.",
   "II. Referral Reward": "II. 추천 보상",
-  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "지갑을 성공적으로 만들고 다른 사람들을 초대하여 KYC 지갑을 만들어낸 각 사용자는 <span style='color: rgba(184, 142, 86, 1);'>6000</span>개의 DGC 보상을 받습니다.",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward,The activity lasts until January 2nd, 2025.": "지갑을 성공적으로 만들고 다른 사람들을 초대하여 KYC 지갑을 만들어낸 각 사용자는 <span style='color: rgba(184, 142, 86, 1);'>6000</span>개의 DGC 보상을 받습니다,이 활동은 2025년 1월 2일까지 진행됩니다.",
   "III. Clock in Reward": "III. 출근 기록 보상",
   "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "인증이 완료된 후 <span style='color: rgba(184, 142, 86, 1);'>60</span>일 동안 출근 기록 보상이 유효합니다.",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "<span style='color: rgba(184, 142, 86, 1);'>1</span>일 동안 로그인하고 출근 기록을 남기는 경우 <span style='color: rgba(184, 142, 86, 1);'>100</span>개의 DGC 보상을 받을 수 있습니다. 출근 기록 보상은 최대 <span style='color: rgba(184, 142, 86, 1);'>30</span>회까지 가능합니다.",
