更新页面设置

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -785,5 +785,6 @@
   "Enter verification code":"Verifizierungscode eingeben",
   "Previous":"vorherig",
   "Finish":"fertig",
-  "Next":"nächster"
+  "Next":"nächster",
+  "Not supported": "Nicht unterstützt"
 }
