--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -784,5 +784,6 @@
   "Enter verification code":"Entrez le code de vérification",
   "Previous": "précédent",
   "Finish": "terminer",
-  "Next": "suivant"
+  "Next": "suivant",
+  "Not supported": "Non supporté"
 }
