--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -785,5 +785,6 @@
   "Enter verification code":"Masukkan kode verifikasi",
   "Previous": "sebelumnya",
   "Finish": "selesai",
-  "Next": "berikutnya"
+  "Next": "berikutnya",
+  "Not supported": "Tidak didukung"
 }
