--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -785,5 +785,6 @@
   "Enter verification code":"確認コードを入力してください",
   "Previous": "前の",
   "Finish": "終了",
-  "Next": "次の"
+  "Next": "次の",
+  "Not supported": "サポートされていません"
 }
