--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -785,5 +785,6 @@
   "Enter verification code":"Insira o código de verificação",
   "Previous": "anterior",
   "Finish": "terminar",
-  "Next": "seguinte"
+  "Next": "seguinte",
+  "Not supported": "Não suportado"
 }
