--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -784,5 +784,6 @@
   "Enter verification code":"Введите код подтверждения",
   "Previous": "предыдущий",
   "Finish": "закончить",
-  "Next": "следующий"
+  "Next": "следующий",
+  "Not supported": "Не поддерживается"
 }
