--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -785,5 +785,6 @@
   "Enter verification code":"Doğrulama kodunu girin",
   "Previous": "önceki",
   "Finish": "bitirmek",
-  "Next": "sonraki"
+  "Next": "sonraki",
+  "Not supported": "Desteklenmiyor"
 }
