--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -776,5 +776,6 @@
   "Enter verification code":"Nhập mã xác minh",
   "Previous": "trước đó",
   "Finish": "hoàn thành",
-  "Next": "tiếp theo"
+  "Next": "tiếp theo",
+  "Not supported": "Không được hỗ trợ"
 }
