更新模型 使用 说明

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -231,7 +231,7 @@
   "Enter Your privateKey": "",
   "Enter Your Role": "",
   "Estimated fuel costs:": "",
-  "Everything in Free": "",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "",
   "Experimental": "",
   "Export": "",
   "Export All Chats (All Users)": "",
@@ -496,7 +496,7 @@
   "The length of the name cannot be less than 3 characters": "",
   "The length of the name cannot exceed 12 characters": "",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "",
   "For VlP users, the daily limit is 500 times.": "",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "",
