--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -232,7 +232,7 @@
   "Enter Your privateKey": "あなたの秘密鍵を入力してください",
   "Enter Your Role": "あなたの役割を入力してください",
   "Estimated fuel costs:": "推定燃料費：",
-  "Everything in Free": "全て無料",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "メッセージ、画像理解、高度なデータ分析、およびウェブ閲覧の拡張アクセス権限",
   "Experimental": "実験的",
   "Export": "エクスポートする",
   "Export All Chats (All Users)": "全てのユーザーの全てのチャットをエクスポートする",
@@ -498,8 +498,9 @@
   "The length of the name cannot be less than 3 characters": "名前の長さは 3 文字以上でなければなりません",
   "The length of the name cannot exceed 12 characters": "名前の長さは 12 文字以下でなければなりません",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "スコアは 0.0（0%）から 1.0（100%）の間の値でなければなりません",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "ウォレットを作成したユーザーには、日に 50 回までの制限があります。ウォレットを作成していないユーザーには、日に 10 回までの制限があります。",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "ウォレットを作成したユーザーには、日に 50 回までの制限があります。ウォレットを作成していないユーザーには、日に 5 回までの制限があります。",
   "For VlP users, the daily limit is 500 times.": "VIP ユーザーには、日に 500 回までの制限があります。",
+  "For o1 and other models, the daily limit is 1000 times.": "o1 およびその他のモデルについて、日次の制限は 1000 回です。",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "あなたが招待するユーザーは、報酬を受け取る前にウォレット作成と KYC 検証プロセスを完了しなければなりません",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "これは、あなたの貴重な会話がバックエンドデータベースに安全に保存されることを保証します。ありがとう！",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "これはプロユーザー向けの独占サービスです。まずプロの権限をアップグレードしてください！",
