--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -231,7 +231,7 @@
   "Enter Your privateKey": "Digite o seu chave privada",
   "Enter Your Role": "Digite o seu papel",
   "Estimated fuel costs:": "Custos estimados de combustível:",
-  "Everything in Free": "Tudo grátis",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Permissões de acesso ampliadas para mensagens, compreensão de imagens, análise avançada de dados e navegação na web",
   "Experimental": "Experimental",
   "Export": "Exportar",
   "Export All Chats (All Users)": "Exportar todos os chats (todos os usuários)",
@@ -496,7 +496,7 @@
   "The length of the name cannot be less than 3 characters": "A comprimento do nome não pode ser menor que 3 caracteres",
   "The length of the name cannot exceed 12 characters": "A comprimento do nome cannot exceder 12 caracteres",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "A pontuação deve ser um valor entre 0.0 (0%) e 1.0 (100%).",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Para os usuários que criaram uma carteira, o limite diário é de 50 vezes. Para os usuários que não criaram uma carteira, o limite diário é de 10 vezes.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "Para os usuários que criaram uma carteira, o limite diário é de 50 vezes. Para os usuários que não criaram uma carteira, o limite diário é de 5 vezes.",
   "For VlP users, the daily limit is 500 times.": "Para os usuários VIP, o limite diário é de 500 vezes.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "O usuário que você convida deve completar o processo de criação de carteira e a verificação KYC antes de você receber a recompensa",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Isso garante que suas valiosas conversas sejam salvas com segurança em seu banco de dados de backend. Obrigado!",
