--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -230,7 +230,7 @@
   "Enter Your privateKey": "Введите ваш приватный ключ",
   "Enter Your Role": "Введите вашу роль",
   "Estimated fuel costs:": "Оценочные затраты на топливо:",
-  "Everything in Free": "Все бесплатно",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Расширенные права доступа для сообщений, понимания изображений, продвинутого анализа данных и веб-обзора",
   "Experimental": "Экспериментальный",
   "Export": "Экспорт",
   "Export All Chats (All Users)": "Экспорт всех чатов (все пользователи)",
@@ -495,8 +495,9 @@
   "The length of the name cannot be less than 3 characters": "Длина имени не может быть менее 3 символов",
   "The length of the name cannot exceed 12 characters": "Длина имени не может превышать 12 символов",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Балл должен быть значением между 0.0 (0%) и 1.0 (100%).",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Для пользователей, которые создали кошелек, ежедневный лимит составляет 50 раз. Для пользователей, которые не создали кошелек, ежедневный лимит составляет 10 раз.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "Для пользователей, которые создали кошелек, ежедневный лимит составляет 50 раз. Для пользователей, которые не создали кошелек, ежедневный лимит составляет 5 раз.",
   "For VlP users, the daily limit is 500 times.": "Для VIP-пользователей ежедневный лимит составляет 500 раз.",
+  "For o1 and other models, the daily limit is 1000 times.": "Для o1 и других моделей ежедневный лимит составляет 1000 раз.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "Пользователь, которого вы приглашаете, должен завершить создание кошелька и процесс верификации KYC, прежде чем вы сможете получить вознаграждение",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Это гарантирует, что ваши ценные разговоры безопасно сохранены в вашей базе данных на сервере. Спасибо!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "Это является исключительным сервисом для пользователей pro. \n Пожалуйста, обновите свои права pro сначала!",
