--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -231,7 +231,7 @@
   "Enter Your privateKey": "Özel anahtarınızı girin",
   "Enter Your Role": "Rolünüzü girin",
   "Estimated fuel costs:": "Tahmini yakıt maliyetleri:",
-  "Everything in Free": "Her şey Ücretsiz",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Mesajlar, resim anlama, gelişmiş veri analizi ve web tarayıcılığı için genişletilmiş erişim hakları",
   "Experimental": "Deneysel",
   "Export": "Dışa Aktar",
   "Export All Chats (All Users)": "Tüm Kullanıcıların Tüm Sohbetlerini Dışa Aktar",
@@ -496,7 +496,7 @@
   "The length of the name cannot be less than 3 characters": "İsim uzunluğu 3 karakterden az olamaz.",
   "The length of the name cannot exceed 12 characters": "İsim uzunluğu 12 karakterden fazla olamaz.",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Puan 0.0 (0%) ile 1.0 (100%) arasında bir değer olmalıdır.",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Cüzdan oluşturmuş kullanıcılar için günlük sınır 50 kezdir. Cüzdan oluşturmamış kullanıcılar için günlük sınır 10 kezdir.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "Cüzdan oluşturmuş kullanıcılar için günlük sınır 50 kezdir. Cüzdan oluşturmamış kullanıcılar için günlük sınır 5 kezdir.",
   "For VlP users, the daily limit is 500 times.": "VIP kullanıcılar için günlük sınır 500 kezdir.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "Davet ettiğiniz kullanıcı ödül alabilmeniz için cüzdan oluşturma ve KYC doğrulama işlemlerini tamamlamalıdır.",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Bu, değerli konuşmalarınızın güvenli bir şekilde arka uç veritabanınıza kaydedilmesini sağlar. Teşekkür ederiz!",
