--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -231,7 +231,7 @@
   "Enter Your privateKey": "Nhap khóa riêng của bạn",
   "Enter Your Role": "Nhap vai trò của bạn",
   "Estimated fuel costs:": "Chi phí nhiên liệu ước tính:",
-  "Everything in Free": "Tất cả miễn phí",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Quyền truy cập mở rộng cho tin nhắn, hiểu biết về hình ảnh, phân tích dữ liệu nâng cao và duyệt web",
   "Experimental": "Thí nghiệm",
   "Export": "Xuất",
   "Export All Chats (All Users)": "Xuất tất cả các cuộc trò chuyện (tất cả người dùng)",
@@ -496,8 +496,9 @@
   "The length of the name cannot be less than 3 characters": "Độ dài của tên không thể nhỏ hơn 3 ký tự",
   "The length of the name cannot exceed 12 characters": "Độ dài của tên không thể lớn hơn 12 ký tự",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Điểm số nên là một giá trị giữa 0.0 (0%) và 1.0 (100%).",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Đối với người dùng đã tạo ví, giới hạn hàng ngày là 50 lần. Đối với người dùng chưa tạo ví, giới hạn hàng ngày là 10 lần.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "Đối với người dùng đã tạo ví, giới hạn hàng ngày là 50 lần. Đối với người dùng chưa tạo ví, giới hạn hàng ngày là 5 lần.",
   "For VlP users, the daily limit is 500 times.": "Đối với người dùng VIP, giới hạn hàng ngày là 500 lần.",
+  "For o1 and other models, the daily limit is 1000 times.": "Đối với o1 và các mô hình khác, giới hạn hàng ngày là 1000 lần.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "Người dùng bạn mời phải hoàn thành quá trình tạo ví và xác nhận KYC trước khi bạn có thể nhận thưởng",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Điều này đảm bảo rằng các cuộc trò chuyện có giá trị của bạn được lưu trữ an toàn vào cơ sở dữ liệu phía sau. Cảm ơn bạn!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "Đây là một dịch vụ độc quyền cho người dùng pro. \n Vui lòng nâng cấp quyền hạn pro của bạn trước!",
