--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -229,7 +229,7 @@
   "Enter Your privateKey": "输入你的私钥",
   "Enter Your Role": "输入你的角色",
   "Estimated fuel costs:": "预计燃料成本：",
-  "Everything in Free": "一切免费",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "对消息、图片理解、高级数据分析、网页浏览的扩展访问权限",
   "Experimental": "实验性的；试验性的",
   "Export": "导出",
   "Export All Chats (All Users)": "导出所有用户的所有聊天记录",
@@ -529,8 +529,9 @@
   "The length of the name cannot be less than 3 characters": "名称的长度不能少于 3 个字符",
   "The length of the name cannot exceed 12 characters": "名称的长度不能超过 12 个字符",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "分数应该是介于 0.0（0%）和 1.0（100%）之间的值。",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "对于已经创建钱包的用户，每日限制为 50 次。对于尚未创建钱包的用户，每日限制为 10 次。",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "对于已经创建钱包的用户，每日限制为 50 次。对于尚未创建钱包的用户，每日限制为 5 次。",
   "For VlP users, the daily limit is 500 times.": "对于 VIP 用户，每日限制为 500 次。",
+  "For o1 and other models, the daily limit is 1000 times.": "对 o1 以及其他模型的每日1000次使用。",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "你邀请的用户必须完成钱包创建和了解你的客户（KYC）验证流程，然后你才能获得奖励",
   "Theme": "主题；主题风格",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "这确保了您宝贵的对话被安全地保存到后端数据库。谢谢！",
