--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -231,7 +231,7 @@
   "Enter Your privateKey": "Ihr privater Schlüssel eingeben",
   "Enter Your Role": "Ihre Rolle eingeben",
   "Estimated fuel costs:": "Geschätzte Brennstoffkosten:",
-  "Everything in Free": "Alles kostenlos",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Erweiterte Zugriffsrechte für Nachrichten, Bildverständnis, fortgeschrittene Datenanalyse und Webbrowsing",
   "Experimental": "Experimental",
   "Export": "Exportieren",
   "Export All Chats (All Users)": "Alle Chats (alle Benutzer) exportieren",
@@ -496,7 +496,7 @@
   "The length of the name cannot be less than 3 characters": "Die Länge des Namens darf nicht weniger als 3 Zeichen sein",
   "The length of the name cannot exceed 12 characters": "Die Länge des Namens darf nicht mehr als 12 Zeichen sein",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Der Punktzahl sollte ein Wert zwischen 0.0 (0%) und 1.0 (100%) sein.",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Für Benutzer, die eine Brieftasche erstellt haben, beträgt die tägliche Limitierung 50 Mal. Für Benutzer, die keine Brieftasche erstellt haben, beträgt die tägliche Limitierung 10 Mal.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "Für Benutzer, die eine Brieftasche erstellt haben, beträgt die tägliche Limitierung 50 Mal. Für Benutzer, die keine Brieftasche erstellt haben, beträgt die tägliche Limitierung 5 Mal.",
   "For VlP users, the daily limit is 500 times.": "Für VIP-Nutzer beträgt die tägliche Limitierung 500 Mal.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "Der von Ihnen eingeladene Benutzer muss den Prozess der Wallet-Erstellung und der KYC-Verifikation abschließen, bevor Sie die Belohnung erhalten können.",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Dies gewährleistet, dass Ihre wertvollen Gespräche sicher in Ihrer Backend-Datenbank gespeichert werden. Danke!",
