--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -231,7 +231,7 @@
   "Enter Your privateKey": "Ingrese su llave privada",
   "Enter Your Role": "Ingrese su rol",
   "Estimated fuel costs:": "Costos estimados de combustible:",
-  "Everything in Free": "Todo en libre",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Derechos de acceso extendidos para mensajes, comprensión de imágenes, análisis de datos avanzados y navegación web",
   "Experimental": "Experimental",
   "Export": "Exportar",
   "Export All Chats (All Users)": "Exportar todos los chats (todos los usuarios)",
@@ -496,8 +496,9 @@
   "The length of the name cannot be less than 3 characters": "La longitud del nombre no puede ser menor que 3 caracteres",
   "The length of the name cannot exceed 12 characters": "La longitud del nombre no puede exceder 12 caracteres",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "La puntuación debe ser un valor entre 0.0 (0%) y 1.0 (100%).",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Para los usuarios que han creado una billetera, el límite diario es de 50 veces. Para los usuarios que no han creado una billetera, el límite diario es de 10 veces.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "Para los usuarios que han creado una billetera, el límite diario es de 50 veces. Para los usuarios que no han creado una billetera, el límite diario es de 5 veces.",
   "For VlP users, the daily limit is 500 times.": "Para los usuarios VIP, el límite diario es de 500 veces.",
+  "For o1 and other models, the daily limit is 1000 times.": "Para el o1 y otros modelos, el límite diario es de 1000 veces.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "El usuario que invites debe completar el proceso de creación de billetera y la verificación KYC antes de que puedas recibir la recompensa",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Esto garantiza que tus valiosas conversaciones se guarden de manera segura en tu base de datos de backend. ¡Gracias!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "Este es un servicio exclusivo para usuarios pro. \n Por favor, actualiza tus permisos pro primero!",
