--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -230,7 +230,7 @@
   "Enter Your privateKey": "Entrer votre clé privée",
   "Enter Your Role": "Entrer votre rôle",
   "Estimated fuel costs:": "Coûts estimatifs de carburant:",
-  "Everything in Free": "Tout est gratuit",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Droits d'accès étendus pour les messages, la compréhension des images, l'analyse de données avancée et la navigation sur le web",
   "Experimental": "Expérimental",
   "Export": "Exporter",
   "Export All Chats (All Users)": "Exporter toutes les conversations (tous les utilisateurs)",
@@ -495,8 +495,9 @@
   "The length of the name cannot be less than 3 characters": "La longueur du nom ne peut pas être inférieureà 3 caractères",
   "The length of the name cannot exceed 12 characters": "La longueur du nom ne peut pas dépasser 12 caractères",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Le score doit être une valeur comprise entre 0.0 (0%) et 1.0 (100%).",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Pour les utilisateurs ayant créé un portefeuille, la limite quotidienne est de 50 fois. Pour les utilisateurs n'ayant pas créé un portefeuille, la limite quotidienne est de 10 fois.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "Pour les utilisateurs ayant créé un portefeuille, la limite quotidienne est de 50 fois. Pour les utilisateurs n'ayant pas créé un portefeuille, la limite quotidienne est de 5 fois.",
   "For VlP users, the daily limit is 500 times.": "Pour les utilisateurs VIP, la limite quotidienne est de 500 fois.",
+  "For o1 and other models, the daily limit is 1000 times.": "Pour le modèle o1 et d'autres modèles, la limite quotidienne est de 1000 fois.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "L'utilisateur que vous invitez doit compléter le processus de création de portefeuille et la vérification KYC avant que vous puissiez recevoir la récompense",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Cela garantit que vos conversations précieuses sont sauvegardées en toute sécurité dans votre base de données de back-end. Merci!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "C'est un service exclusif pour les utilisateurs pro. \n Veuillez mettre à niveau vos permissions pro en premier!",
