--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -231,7 +231,7 @@
   "Enter Your privateKey": "Masukkan Kunci Privat Anda",
   "Enter Your Role": "Masukkan Peran Anda",
   "Estimated fuel costs:": "Biaya bahan bakar perkiraan:",
-  "Everything in Free": "Semua Gratis",
+  "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Hak akses yang diperluas untuk pesan, pemahaman gambar, analisis data tingkat lanjut, dan penjelajahan web",
   "Experimental": "Eksperimental",
   "Export": "Ekspor",
   "Export All Chats (All Users)": "Ekspor Semua Obrolan (Semua Pengguna)",
@@ -496,7 +496,7 @@
   "The length of the name cannot be less than 3 characters": "Panjang nama tidak boleh kurang dari 3 karakter",
   "The length of the name cannot exceed 12 characters": "Panjang nama tidak boleh lebih dari 12 karakter",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Skor harus berupa nilai antara 0.0 (0%) dan 1.0 (100%).",
-  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 10 times.": "Untuk pengguna yang telah membuat dompet, batas hariannya adalah 50 kali. Untuk pengguna yang belum membuat dompet, batas hariannya adalah 10 kali.",
+  "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "Untuk pengguna yang telah membuat dompet, batas hariannya adalah 50 kali. Untuk pengguna yang belum membuat dompet, batas hariannya adalah 5 kali.",
   "For VlP users, the daily limit is 500 times.": "Untuk pengguna VIP, batas hariannya adalah 500 kali.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "Pengguna yang Anda undang harus menyelesaikan proses pembuatan dompet dan proses verifikasi KYC sebelum Anda dapat menerima hadiah",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Ini memastikan bahwa obrolan berharga Anda disimpan dengan aman ke database backend Anda. Terima kasih!",
