--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -498,6 +498,7 @@
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Der Punktzahl sollte ein Wert zwischen 0.0 (0%) und 1.0 (100%) sein.",
   "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "Für Benutzer, die eine Brieftasche erstellt haben, beträgt die tägliche Limitierung 50 Mal. Für Benutzer, die keine Brieftasche erstellt haben, beträgt die tägliche Limitierung 5 Mal.",
   "For VlP users, the daily limit is 500 times.": "Für VIP-Nutzer beträgt die tägliche Limitierung 500 Mal.",
+  "For o1 and other models, the daily limit is 1000 times.": "Für das o1- und andere Modelle beträgt die tägliche Grenze 1000 Mal.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "Der von Ihnen eingeladene Benutzer muss den Prozess der Wallet-Erstellung und der KYC-Verifikation abschließen, bevor Sie die Belohnung erhalten können.",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Dies gewährleistet, dass Ihre wertvollen Gespräche sicher in Ihrer Backend-Datenbank gespeichert werden. Danke!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "Dies ist ein exklusives Service für Pro-Benutzer. \n Bitte upgraden Sie Ihre Pro-Berechtigungen zuerst!",
