--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -498,6 +498,7 @@
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "",
   "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "",
   "For VlP users, the daily limit is 500 times.": "",
+  "For o1 and other models, the daily limit is 1000 times.": "",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "",
