--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -497,6 +497,7 @@
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "คะแนนควรเป็นค่าที่อยู่ระหว่าง 0.0 (0%) และ 1.0 (100%).",
   "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "สำหรับผู้ใช้งานที่สร้างกระเป๋าเงินแล้ว จำกัดการใช้งานรายวันคือ 50 ครั้ง สำหรับผู้ใช้งานที่ยังไม่สร้างกระเป๋าเงิน จำกัดการใช้งานรายวันคือ 5 ครั้ง.",
   "For VlP users, the daily limit is 500 times.": "สำหรับผู้ใช้ VIP จำกัดการใช้งานรายวันคือ 500 ครั้ง",
+  "For o1 and other models, the daily limit is 1000 times.": "สำหรับ o1 และแบบจำลองอื่น ๆ ขีดจำกัดรายวันคือ 1000 ครั้ง",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "ผู้ใช้ที่คุณเชิญต้องเสร็จสิ้นกระเป๋าเงินและกระบวนการตรวจสอบ KYC ก่อนที่คุณจะได้รับรางวัล",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "สิ่งนี้รับประกันว่าการสนทนาที่มีค่าใช้ของคุณถูกบันทึกอย่างปลอดภัยในฐานข้อมูลหลังบ้านของคุณ. ขอบคุณ!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "สิ่งนี้เป็นบริการพิเศษสำหรับผู้ใช้ pro. \n โปรดอัปเกรดสิทธิ์ pro ของคุณก่อน!",
