--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -498,6 +498,7 @@
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "Puan 0.0 (0%) ile 1.0 (100%) arasında bir değer olmalıdır.",
   "For users who have created a wallet, the daily limit is 50 times. For users who have not created a wallet, the daily limit is 5 times.": "Cüzdan oluşturmuş kullanıcılar için günlük sınır 50 kezdir. Cüzdan oluşturmamış kullanıcılar için günlük sınır 5 kezdir.",
   "For VlP users, the daily limit is 500 times.": "VIP kullanıcılar için günlük sınır 500 kezdir.",
+  "For o1 and other models, the daily limit is 1000 times.": "o1 ve diğer modeller için günlük sınır 1000 kezdir.",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "Davet ettiğiniz kullanıcı ödül alabilmeniz için cüzdan oluşturma ve KYC doğrulama işlemlerini tamamlamalıdır.",
   "This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Bu, değerli konuşmalarınızın güvenli bir şekilde arka uç veritabanınıza kaydedilmesini sağlar. Teşekkür ederiz!",
   "This is an exclusive service for pro users. \n Please upgrade your pro permissions first!": "Bu, pro kullanıcılar için özel bir hizmetdir. \n Lütfen önce pro izinlerinizi yükseltin!",
