更新模型提示语  登陆框往左移动一点

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -683,6 +683,7 @@
   "Download DeGPT to obtain rewards": "",
   "Switch Models": "",
   "Suitable for most tasks": "",
+  "Use advanced reasoning and take photos to solve math problems": "",
   "Support image recognition": "",
   "Optimize code writing": "",
   "Please select at least one model.": "",
