--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -683,6 +683,7 @@
   "Download DeGPT to obtain rewards": "Descarga DeGPT para obtener recompensas.",
   "Switch Models": "Cambiar modelos",
   "Suitable for most tasks": "Adecuado para la mayoría de las tareas",
+  "Use advanced reasoning and take photos to solve math problems": "Utilice el razonamiento avanzado y tome fotos para resolver problemas matemáticos",
   "Support image recognition": "Soporte para el reconocimiento de imágenes",
   "Optimize code writing": "Optimizar la escritura de código",
   "Please select at least one model.": "Por favor, seleccione al menos un modelo.",
