--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -683,6 +683,7 @@
   "Download DeGPT to obtain rewards": "Faça o download do DeGPT para obter recompensas.",
   "Switch Models": "Mudar modelos",
   "Suitable for most tasks": "Apropriado para a maioria das tarefas",
+  "Use advanced reasoning and take photos to solve math problems": "Use raciocínio avançado e tire fotos para resolver problemas matemáticos",
   "Support image recognition": "Suporte para o reconhecimento de imagens",
   "Optimize code writing": "Otimizar a escrita de código",
   "Please select at least one model.": "Por favor, selecione pelo menos um modelo.",
