--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -683,6 +683,7 @@
   "Download DeGPT to obtain rewards": "Ödüller almak için DeGPT'yi indirin.",
   "Switch Models": "Model Değiştir",
   "Suitable for most tasks": "Çoğu görev için uygundur",
+  "Use advanced reasoning and take photos to solve math problems": "Matematik problemlerini çözmek için gelişmiş akıl yürütmeyi kullanın ve fotoğraf çekin",
   "Support image recognition": "Görüntü tanıma desteği sağlar",
   "Optimize code writing": "Kod yazımını optimize et",
   "Please select at least one model.": "Lütfen en az bir model seçin.",
