--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -683,6 +683,7 @@
   "Download DeGPT to obtain rewards": "Tải xuống DeGPT để nhận phần thưởng.",
   "Switch Models": "Chuyển đổi mô hình",
   "Suitable for most tasks": "Thích hợp cho hầu hết các nhiệm vụ",
+  "Use advanced reasoning and take photos to solve math problems": "Sử dụng suy luận nâng cao và chụp ảnh để giải các bài toán toán học",
   "Support image recognition": "Hỗ trợ nhận dạng hình ảnh",
   "Optimize code writing": "Tối ưu hóa việc viết mã",
   "Please select at least one model.": "Vui lòng chọn ít nhất một mô hình.",
