--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -682,6 +682,7 @@
   "Download DeGPT to obtain rewards": "Téléchargez DeGPT pour obtenir des récompenses.",
   "Switch Models": "Changer de modèles",
   "Suitable for most tasks": "Adapté à la plupart des tâches",
+  "Use advanced reasoning and take photos to solve math problems": "Utilisez un raisonnement avancé et prenez des photos pour résoudre des problèmes mathématiques",
   "Support image recognition": "Prise en charge de la reconnaissance d'images",
   "Optimize code writing": "Optimiser l'écriture de code",
   "Please select at least one model.": "Veuillez sélectionner au moins un modèle.",
