--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -682,6 +682,7 @@
   "Download DeGPT to obtain rewards": "下载 DeGPT 以便获得奖励",
   "Switch Models": "切换模型",
   "Suitable for most tasks": "适用于大多数任务",
+  "Use advanced reasoning and take photos to solve math problems": "使用高级推理，可拍照解数学题",
   "Support image recognition": "支持图片识别",
   "Optimize code writing": "优化写代码功能",
   "Please select at least one model.": "请至少选择一个模型。",
