更新模型提示语和选择模型宽度

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -683,7 +683,7 @@
   "Download DeGPT to obtain rewards": "DeGPT herunterladen, um Belohnungen zu erhalten.",
   "Switch Models": "Modellwechsel",
   "Suitable for most tasks": "Für die meisten Aufgaben geeignet",
-  "Use advanced reasoning and take photos to solve math problems": "Verwenden Sie fortgeschrittenes Denken und nehmen Sie Fotos, um mathematische Probleme zu lösen",
+  "Take photos to solve math problems": "Fotos machen, um mathematische Probleme zu lösen",
   "Support image recognition": "Unterstützung der Bilderkennung",
   
   "Optimize code writing": "Die Code-Schreibweise optimieren",
