--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -683,7 +683,7 @@
   "Download DeGPT to obtain rewards": "Unduh DeGPT untuk mendapatkan hadiah.",
   "Switch Models": "Ganti model",
   "Suitable for most tasks": "Cocok untuk sebagian besar tugas",
-  "Use advanced reasoning and take photos to solve math problems": "Gunakan penalaran tingkat lanjut dan ambil foto untuk menyelesaikan soal matematika",
+  "Take photos to solve math problems": "Mengambil foto untuk menyelesaikan masalah matematika",
   "Support image recognition": "Mendukung pengenalan gambar",
   "Optimize code writing": "Mengoptimalkan penulisan kode",
   "Please select at least one model.": "Silakan pilih setidaknya satu model.",
