--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -682,7 +682,7 @@
   "Download DeGPT to obtain rewards": "Загрузите DeGPT для получения вознаграждений.",
   "Switch Models": "Переключить модели",
   "Suitable for most tasks": "Подходит для большинства задач",
-  "Use advanced reasoning and take photos to solve math problems": "Используйте продвинутое рассуждение и сделайте фотографии для решения математических задач",
+  "Take photos to solve math problems": "Сделать фотографии для решения математических задач",
   "Support image recognition": "Поддерживает распознавание изображений",
   "Optimize code writing": "Оптимизировать написание кода",
   "Please select at least one model.": "Пожалуйста, выберите хотя бы один модель.",
