更新访问页面布局

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -780,7 +780,7 @@
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "",
   "Download DeGPT APP": "",
   "More info": "",
-  "Visit": "",
+  "Visit": "Visit ",
   "official website": "",
   "Code":"",
   "Enter email address":"",
