--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -780,7 +780,7 @@
   "Download DeGPT APP": "下载 DeGPT 应用",
   "More info": "更多信息",
   "Visit": "访问",
-  "official website": "官方网站",
+  "official website": "官网",
   "Code":"验证码",
   "Enter email address":"输入电子邮件地址",
   "Enter verification code":"输入验证码",
